Fix navbar logo spacing

--- a/qtify/src/components/Navbar/Navbar.module.css
+++ b/qtify/src/components/Navbar/Navbar.module.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
   background-color: var(--color-primary);
   height: 74px;
 
@@ -6,6 +6,19 @@
   box-sizing: border-box;
 
   padding: 0 32px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+} */
+.navbar {
+  background-color: var(--color-primary);
+  height: 74px;
+
+  width: 100%;
+  box-sizing: border-box;
+
+  padding: 0 20px;
 
   display: flex;
   align-items: center;
